// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Matches the desktop snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.6rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.55px;
  -moz-letter-spacing: 0.55px;
  -ms-letter-spacing: 0.55px;
  letter-spacing: 0.55px;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: var(--spacing-half) var(--spacing-2x);
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  background-color: transparent;
  border: none;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c1:hover {
  color: #000000;
}

.c1:disabled {
  color: #9CA7B4;
}

.c3 {
  margin: 0 4px;
  padding: 0;
}

.c4 {
  background-color: #0080A5;
  border-radius: 100%;
  color: #FFFFFF;
  display: inline-block;
  font-size: 0.9rem;
  font-weight: 600;
  line-height: 24px;
  margin: 0 4px;
  text-align: center;
  width: 24px;
}

.c4:hover {
  background-color: #0080A5;
  cursor: default;
}

.c4:focus {
  box-shadow: 0 0 2px 2px #99CCDB;
  outline: none;
}

.c5 {
  background-color: #FFFFFF;
  border-radius: 100%;
  color: #000000;
  display: inline-block;
  font-size: 0.9rem;
  font-weight: 400;
  line-height: 24px;
  margin: 0 4px;
  text-align: center;
  width: 24px;
}

.c5:hover {
  background-color: #D9DDE2;
  cursor: pointer;
}

.c5:focus {
  box-shadow: 0 0 2px 2px #99CCDB;
  outline: none;
}

.c2 {
  margin: -4px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flexbox;
  display: -ms-flexboxbox;
  display: flexbox;
}

<div
  className="c0"
>
  <button
    aria-label="first page"
    className="c1 c2"
    data-testid="firstPageButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="16"
      width="16"
    />
  </button>
  <button
    aria-label="previous page"
    className="c1 c2"
    data-testid="previousPageButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="16"
      width="16"
    />
  </button>
  <ol
    className="c3"
  >
    <li
      className="c4"
      data-testid="page-1"
      onClick={[Function]}
      tabIndex={0}
    >
      1
    </li>
    <li
      className="c5"
      data-testid="page-2"
      onClick={[Function]}
      tabIndex={0}
    >
      2
    </li>
    <li
      className="c5"
      data-testid="page-3"
      onClick={[Function]}
      tabIndex={0}
    >
      3
    </li>
  </ol>
  <button
    aria-label="next page"
    className="c1 c2"
    data-testid="nextPageButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="16"
      width="16"
    />
  </button>
  <button
    aria-label="last page"
    className="c1 c2"
    data-testid="lastPageButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="16"
      width="16"
    />
  </button>
</div>
`;

exports[`Pagination Matches the mobile snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.6rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.55px;
  -moz-letter-spacing: 0.55px;
  -ms-letter-spacing: 0.55px;
  letter-spacing: 0.55px;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: var(--spacing-half) var(--spacing-2x);
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 48px;
  background-color: transparent;
  border: none;
  color: #57666E;
  padding: 0;
  width: 48px;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c1:hover {
  color: #000000;
}

.c1:disabled {
  color: #9CA7B4;
}

.c3 {
  margin: 0 4px;
  padding: 0;
}

.c4 {
  background-color: #0080A5;
  border-radius: 100%;
  color: #FFFFFF;
  display: inline-block;
  font-size: 1rem;
  font-weight: 600;
  line-height: 32px;
  margin: 0 4px;
  text-align: center;
  width: 32px;
}

.c4:hover {
  background-color: #0080A5;
  cursor: default;
}

.c4:focus {
  box-shadow: 0 0 2px 2px #99CCDB;
  outline: none;
}

.c5 {
  background-color: #FFFFFF;
  border-radius: 100%;
  color: #000000;
  display: inline-block;
  font-size: 1rem;
  font-weight: 400;
  line-height: 32px;
  margin: 0 4px;
  text-align: center;
  width: 32px;
}

.c5:hover {
  background-color: #D9DDE2;
  cursor: pointer;
}

.c5:focus {
  box-shadow: 0 0 2px 2px #99CCDB;
  outline: none;
}

.c2 {
  margin: -8px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flexbox;
  display: -ms-flexboxbox;
  display: flexbox;
}

<div
  className="c0"
>
  <button
    aria-label="first page"
    className="c1 c2"
    data-testid="firstPageButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="20"
      width="20"
    />
  </button>
  <button
    aria-label="previous page"
    className="c1 c2"
    data-testid="previousPageButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="20"
      width="20"
    />
  </button>
  <ol
    className="c3"
  >
    <li
      className="c4"
      data-testid="page-1"
      onClick={[Function]}
      tabIndex={0}
    >
      1
    </li>
    <li
      className="c5"
      data-testid="page-2"
      onClick={[Function]}
      tabIndex={0}
    >
      2
    </li>
    <li
      className="c5"
      data-testid="page-3"
      onClick={[Function]}
      tabIndex={0}
    >
      3
    </li>
  </ol>
  <button
    aria-label="next page"
    className="c1 c2"
    data-testid="nextPageButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="20"
      width="20"
    />
  </button>
  <button
    aria-label="last page"
    className="c1 c2"
    data-testid="lastPageButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      color="currentColor"
      focusable={false}
      height="20"
      width="20"
    />
  </button>
</div>
`;
